--- a/TransitPort/angular.json
+++ b/TransitPort/angular.json
@@ -90,9 +90,14 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css", 
+              "node_modules/datatables.net-dt/css/jquery.dataTables.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/datatables.net/js/jquery.dataTables.min.js"
+            ]
           }
         }
       }
