--- a/TransitPort/package.json
+++ b/TransitPort/package.json
@@ -21,7 +21,16 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.6",
+    "@popperjs/core": "^2.11.8",
+    "angular-datatables": "^19.0.0",
+    "bootstrap": "^5.3.3",
+    "datatables.net": "^2.2.1",
+    "datatables.net-buttons": "^3.2.0",
+    "datatables.net-buttons-dt": "^3.2.0",
+    "datatables.net-dt": "^2.2.1",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
+    "jszip": "^3.10.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
@@ -30,8 +39,11 @@
     "@angular-devkit/build-angular": "^19.0.6",
     "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.0",
+    "@types/datatables.net": "~1.12.3",
+    "@types/datatables.net-buttons": "^1.4.10",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.32",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
