--- a/TransitPort/package.json
+++ b/TransitPort/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.6",
+    "datatables.net": "^2.2.1",
+    "datatables.net-dt": "^2.2.1",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
