--- a/TransitPort/angular.json
+++ b/TransitPort/angular.json
@@ -90,13 +90,9 @@
               }
             ],
             "styles": [
-              "src/styles.css", 
-              "node_modules/datatables.net-dt/css/jquery.dataTables.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "src/styles.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/datatables.net/js/jquery.dataTables.min.js"
             ]
           }
         }
