--- a/TransitPort/package.json
+++ b/TransitPort/package.json
@@ -1,63 +1,46 @@
 {
-  "name": "transit-port",
+  "name": "your-project-name",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:TransitPort": "node dist/transit-port/server/server.mjs"
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.0",
-    "@angular/common": "^19.0.0",
-    "@angular/compiler": "^19.0.0",
-    "@angular/core": "^19.0.0",
-    "@angular/forms": "^19.0.0",
-    "@angular/platform-browser": "^19.0.0",
-    "@angular/platform-browser-dynamic": "^19.0.0",
-    "@angular/platform-server": "^19.0.0",
-    "@angular/router": "^19.0.0",
-    "@angular/ssr": "^19.0.6",
-<<<<<<< HEAD
-    "datatables.net": "^2.2.1",
-    "datatables.net-dt": "^2.2.1",
-    "express": "^4.18.2",
-    "jquery": "^3.7.1",
-=======
-    "@popperjs/core": "^2.11.8",
-    "angular-datatables": "^19.0.0",
-    "bootstrap": "^5.3.3",
-    "datatables.net": "^2.2.1",
-    "datatables.net-buttons": "^3.2.0",
-    "datatables.net-buttons-dt": "^3.2.0",
-    "datatables.net-dt": "^2.2.1",
-    "express": "^4.18.2",
-    "jquery": "^3.7.1",
-    "jszip": "^3.10.1",
->>>>>>> 6f31e2f3ae155178234fc6be73047256a558a435
-    "rxjs": "~7.8.0",
+    "@angular/animations": "~12.2.0",
+    "@angular/common": "~12.2.0",
+    "@angular/compiler": "~12.2.0",
+    "@angular/core": "~12.2.0",
+    "@angular/forms": "~12.2.0",
+    "@angular/platform-browser": "~12.2.0",
+    "@angular/platform-browser-dynamic": "~12.2.0",
+    "@angular/router": "~12.2.0",
     "tslib": "^2.8.1",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "jquery": "^3.6.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.6",
-    "@angular/cli": "^19.0.6",
-    "@angular/compiler-cli": "^19.0.0",
-    "@types/datatables.net": "~1.12.3",
-    "@types/datatables.net-buttons": "^1.4.10",
-    "@types/express": "^4.17.17",
-    "@types/jasmine": "~5.1.0",
-    "@types/jquery": "^3.5.32",
-    "@types/node": "^18.18.0",
-    "jasmine-core": "~5.4.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.2"
+    "@angular-devkit/build-angular": "~12.2.0",
+    "@angular/cli": "~12.2.0",
+    "@angular/compiler-cli": "~12.2.0",
+    "@types/node": "^12.11.1",
+    "@types/jasmine": "~3.8.0",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.8.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.3.5"
   }
 }
