--- a/TransitPort/angular.json
+++ b/TransitPort/angular.json
@@ -92,8 +92,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [
-            ]
+            "scripts": []
           }
         }
       }
