--- a/TransitPort/angular.json
+++ b/TransitPort/angular.json
@@ -98,9 +98,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": [
-
-            ]
+            "scripts": []
           }
         }
       }
