--- a/TransitPort/angular.json
+++ b/TransitPort/angular.json
@@ -28,17 +28,12 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/datatables.net-bs5/css/dataTables.bootstrap5.min.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/datatables.net-dt/css/dataTables.dataTables.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/datatables.net/js/dataTables.min.js",
-              "node_modules/datatables.net-bs5/js/dataTables.bootstrap5.min.js",
-              "node_modules/@popperjs/core/dist/umd/popper.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/jquery/dist/jquery.js"
+              "node_modules/@popperjs/core/dist/umd/popper.min.js"
             ],
             "server": "src/main.server.ts",
             "outputMode": "server",
