--- a/TransitPort/angular.json
+++ b/TransitPort/angular.json
@@ -33,7 +33,7 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/datatables.net/js/dataTables.min.js",
+              "node_modules/datatables.net/js/jquery.dataTables.min.js",
               "node_modules/@popperjs/core/dist/umd/popper.min.js"
             ],
             "server": "src/main.server.ts",
