--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@popperjs/core": "^2.11.8",
     "angular-datatables": "^19.0.0",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "datatables.net": "^2.2.1",
     "datatables.net-bs5": "^2.0.3",
     "datatables.net-dt": "^2.2.1",
