--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.6",
+    "@fullcalendar/angular": "^6.1.17",
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
     "@popperjs/core": "^2.11.8",
     "angular-datatables": "^19.0.0",
     "bootstrap": "^5.3.3",
